# src/routes/User.route.js
@@ -7,7 +7,7 @@ router.get('/', getAllUsers);
 router.get('/id/:id', getUserById);
 router.get('/name', getUserByEmail);
 router.get('/email', getUserByName);
-router.delete('/all/delete', deleteAllUsers)
-router.delete('/:id/delete', deleteUser);
+// router.delete('/delete/all', deleteAllUsers)
+router.delete('/delete/:id', deleteUser);
 router.put('/:id', updateUser);
 export default router;
